--- a/themes/custom/ts_wrin/sass/style.scss
+++ b/themes/custom/ts_wrin/sass/style.scss
@@ -18,18 +18,8 @@
 @import "global/tabs.scss";
 @import "global/tray-nav.scss";
 @import "global/ts-hamburger-menu.scss";
-.main-content,
-.main-content .text-formatted,
-.paragraph--type--side-by-side .text-formatted {
-  line-height: 1.5;
+@import "global/wysiwyg.scss";
 
-  ::selection {
-    background-color: $black;
-    color: $white;
-  }
-
-  @import "global/wysiwyg.scss";
-}
 /* COMPONENTS */
 @import "components/3-and-1-block.scss";
 @import "components/addresses.scss";
